syntax = "proto3";

package keeper;
option go_package = "/keeper";
import "google/api/annotations.proto";


service keeper {
  rpc Health(Empty) returns(HealthMain) {
    option (google.api.http) = {
      get: "/health"
    };
  }
  rpc Register(AuthMain) returns(Empty) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }
  rpc Login(AuthMain) returns(Empty) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
  rpc Logout(Empty) returns(Empty) {
    option (google.api.http) = {
      post: "/logout"
      body: "*"
    };
  }

  rpc Put (ObjMain) returns(Empty){
    option (google.api.http) = {
      post: "/put"
      body: "*"
    };
  }

  rpc Get (ObjMain) returns(ObjMain){
    option (google.api.http) = {
      post: "/get"
      body: "*"
    };
  }
}


message Empty{}

message HealthMain {
  string Status = 1;
  string Version = 2;
  string Message = 3;
}

message AuthMain {
  string User = 1;
  string Password = 2;
}

message ObjMain {
  string Name = 1;
  TypeCode Type = 2;
  bytes EncData = 3;
  string s3Link = 4;
}

enum TypeCode {
  TYPE_NIL = 0;
  TYPE_LOGIN_PASSWORD = 1;
  TYPE_TEXT = 2;
  TYPE_BIN=3;
  TYPE_CARD=4;
}

message SyncMain {
  message KeysMain{
    string Name = 1;
    TypeCode Type = 2;
  }
  repeated KeysMain Keys = 1;
}


